# Nete

./: .gitignore  Cargo.toml  EXTENSIONS.md  README.md  io.github.thomasboom.Nete.metainfo.xml  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/nete/: MainActivity.kt
extensions/example-extension/: README.md  extension.toml  theme.css
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
src/: app.rs  command_bar.rs  config.rs  db.rs  error.rs  extensions.rs  l10n.rs  main.rs  models.rs  plugins.rs  services.rs  settings.rs  sidebar.rs
src/ui/: mod.rs  theme.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
