[package]
name = "Nete"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
eframe = { version = "0.27", default-features = true }
egui = "0.27"
egui_commonmark = "0.16"
fuzzy-matcher = "0.3"
rand = "0.8"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
