[package]
name = "Nete"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { package = "libadwaita", version = "0.7", features = ["v1_4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6.0"
gtk = { package = "gtk4", version = "0.9" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
